# agentscope

./: CLAUDE.md  pyproject.toml
docs/runtime/: 01-overview.md  02-config.md  03-api.md  04-guide.md  05-dev-overview.md  06-dev-architecture.md  07-dev-extending.md  08-dev-testing.md  对话上下文-AgentScope-Runtime模块设计-设计完成待实现.md
examples/deployment/runtime_example/: README.md  agentapp.yaml  app.py
src/agentscope/: __init__.py
src/agentscope/platform/: __init__.py  config.py  manifest.py  pack.py  runtime.py  server.py  session_backend.py
src/agentscope/runtime/: __init__.py  _app_base.py  _cli.py  _config.py  _platform.py  _runtime.py  _server.py  _session.py
tests/: runtime_test.py
